[project]
name = "tap"
version = "0.1.0"
description = "飞书多维表格CLI工具"
authors = [
    {name = "Tap Team"}
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
    "openpyxl>=3.0.0",
]

[project.scripts]
tap = "tap.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
